@@ -455,7 +455,19 @@ GOPHER_TYPE_UNIX_UUENCODED|GOPHER_TYPE_BINARY|GOPHER_TYPE_GIF|GOPHER_TYPE_IMAGE|
 #define HSR_INITIATE	8
 #define HSR_DOWNLOAD	16
 #define HSR_CHUNKED	32
+#define INTERNET_DIAL_UNATTENDED	0x8000
+#define INTERNET_DIALSTATE_DISCONNECTED	1
+#define INTERENT_GOONLINE_REFRESH	1
+#define INTERENT_GOONLINE_MASK	1
+#define INTERNET_AUTODIAL_FORCE_ONLINE	1
+#define INTERNET_AUTODIAL_FORCE_UNATTENDED	2
+#define INTERNET_AUTODIAL_FAILIFSECURITYCHECK	4
+#define INTERNET_CONNECTION_MODEM	1
+#define INTERNET_CONNECTION_LAN	2
+#define INTERNET_CONNECTION_PROXY	4
+#define INTERNET_CONNECTION_MODEM_BUSY	8
 
+#ifndef RC_INVOKED
 typedef PVOID HINTERNET;
 typedef HINTERNET *LPHINTERNET;
 typedef WORD INTERNET_PORT,*LPINTERNET_PORT;
@@ -788,6 +800,14 @@ BOOL WINAPI HttpSendRequestExA(HINTERNET,LPINTERNET_BUFFERSA,LPINTERNET_BUFFERSA
 BOOL WINAPI HttpSendRequestExW(HINTERNET,LPINTERNET_BUFFERSW,LPINTERNET_BUFFERSW,DWORD,DWORD);
 BOOL WINAPI HttpEndRequestA(HINTERNET,LPINTERNET_BUFFERSA,DWORD,DWORD);
 BOOL WINAPI HttpEndRequestW(HINTERNET,LPINTERNET_BUFFERSW,DWORD,DWORD);
+DWORD WINAPI InternetDial(HWND,LPTSTR,DWORD,LPDWORD,DWORD);
+DWORD WINAPI InternetHangUp(DWORD,DWORD);
+BOOL WINAPI InternetGoOnline(LPTSTR,HWND,DWORD);
+BOOL WINAPI InternetAutodial(DWORD,DWORD);
+BOOL WINAPI InternetAutodialHangup(DWORD);
+BOOL WINAPI InternetGetConnectedState(LPDWORD,DWORD);
+BOOL WINAPI InternetSetDialState(LPCTSTR,DWORD,DWORD);
+
 #ifdef UNICODE
 #define InternetCrackUrl InternetCrackUrlW
 #define InternetCreateUrl InternetCreateUrlW
@@ -878,7 +898,8 @@ BOOL WINAPI HttpEndRequestW(HINTERNET,LPINTERNET_BUFFERSW,DWORD,DWORD);
 #define RetrieveUrlCacheEntryFile RetrieveUrlCacheEntryFileA
 #define HttpSendRequestEx	 HttpSendRequestExA
 #define HttpEndRequest		 HttpEndRequestA
-#endif
+#endif /* UNICODE */
+#endif /* RC_INVOKED */
 #ifdef __cplusplus
 }
 #endif
